--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "bufferutil": "^3.0.0",
     "discord.js": "^11.1.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "libsodium-wrappers": "^0.5.1",
     "opusscript": "0.0.3",
     "uws": "^0.14.5"
