Added some code and cleaned up .json files.
The bot now takes some data from ranges in the sheet and I'm going to make it take more data, and then search through all the arrays based on what the user input is.

--- a/json/config.json
+++ b/json/config.json
@@ -1,9 +1,13 @@
 {
-    "id": "asd"
-    "token": "",
-	"sheet": {
-	},
-	"discord": {
-		"prefix": "#"
-	}
+  "sheet": {
+    "ranges": [
+      "Enhancement Guideline!A9:P9",
+      "Enhancement Guideline!A14:P338",
+      "Enhancement Guideline!A345:P356"
+    ],
+    "majorDimension": "ROWS"
+  },
+  "discord": {
+    "prefix": "#"
+  }
 }
