--- a/json/config.json
+++ b/json/config.json
@@ -1,11 +1,7 @@
 {
   "sheet": {
-    "ranges": [
-      "Enhancement Guideline!A9:P9",
-      "Enhancement Guideline!A14:P338",
-      "Enhancement Guideline!A345:P356"
-    ],
-    "majorDimension": "ROWS"
+    "ranges": "Enhancement Guideline!A9:P356",
+    "majorDimension": "COLUMNS"
   },
   "discord": {
     "prefix": "#"
