Fixed formatting errors based on jshinter

--- a/json/config.json
+++ b/json/config.json
@@ -1,9 +1,9 @@
 {
   "sheet": {
-    "ranges": "Enhancement Guideline!A9:P356",
+    "ranges": "Enhancement Guideline!A9:P338",
     "majorDimension": "COLUMNS"
   },
   "discord": {
-    "prefix": "#"
+    "prefix": "!"
   }
 }
