--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "libsodium-wrappers": "^0.5.1",
     "moment": "^2.18.1",
     "opusscript": "0.0.3",
+    "return-deep-diff": "^0.2.7",
     "uws": "^0.14.5"
   }
 }
